<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team04Adventure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="frag_title">Fragment title</string>
    <string name="frag_body">Fragment body</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="link">Link</string>
    <string name="save">Save</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_story_intro">StoryIntro</string>
    <string name="title_activity_fragment_viewer">FragmentViewer</string>
    <string name="title_activity_offline_story_list">OfflineStoryList</string>
    <string name="title_activity_online_story_list">Stories</string>
    <string name="title_activity_edit_fragment">EditFragment</string>
    <string name="title_section1">Online Stories</string>
    <string name="title_section2">My Stories</string>
    <string name="title_section3">Cached Stories</string>
    <string name="title_activity_all_stories_list_swipe">AllStoriesListSwipe</string>
    <string name="title_activity_my_stories_list_swipe">CachedStoriesListSwipe</string>
    <string name="title_activity_create_fragment">CreateFragment</string>
    <string name="title_activity_online_story_intro">Story menu</string>
    <string name="title_activity_frag_list">Story Fragments</string>
    <string name="frag_image">Image</string>
    <string name="title_activity_my_story_intro">MyStoryIntro</string>
    <string name="title_activity_annot_viewer">AnnotViewer</string>
    <string name="title_activity_edit_create_annot">EditCreateAnnot</string>

</resources>
