<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/middle"
    tools:context=".EditFragment" >

    <EditText
        android:id="@+id/frag_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:text="@string/frag_title" />
    <EditText
        android:id="@+id/frag_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:text="@string/frag_body" />
    <Button 
        android:id="@+id/upload"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload" />
    <Button 
        android:id="@+id/camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera" />
    <Button
        android:id="@+id/profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Change Fragment Illustration" />
    <Button 
        android:id="@+id/link"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/link"/>
    <Button 
        android:id="@+id/save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/upload_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5" />
        <TextView
            android:id="@+id/upload_illustration_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="0.5" />
    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <ImageView
            android:id="@+id/upload_image_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:layout_weight="0.5" />
        <ImageView
            android:id="@+id/upload_illustration_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription=""
            android:layout_weight="0.5" />
    </LinearLayout>
    
</LinearLayout>
